// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeadingCell should match the snapshot 1`] = `
<TableHeadingCell__StyledHeadingTableCell>
  <TableHeadingCell__Icon
    shouldDisplay={false}
  />
</TableHeadingCell__StyledHeadingTableCell>
`;

exports[`TableHeadingCell should match the snapshot when beingSorted and order is "asc"  1`] = `
<TableHeadingCell__StyledHeadingTableCell>
  <TableHeadingCell__Icon
    shouldDisplay={true}
  />
</TableHeadingCell__StyledHeadingTableCell>
`;

exports[`TableHeadingCell should match the snapshot when beingSorted and order is "desc"  1`] = `
<TableHeadingCell__StyledHeadingTableCell>
  <TableHeadingCell__Icon
    shouldDisplay={true}
  />
</TableHeadingCell__StyledHeadingTableCell>
`;
